--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,13 @@
 
     <br /><br /><br />
     <div class="container">
+      {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
       {% include "includes/messages.html" %} {% block body %} {% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
