--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,8 @@
-{% extends "layout.html" %}
-{% block body %}
+{% extends "layout.html" %} {% block body %}
 <h3>Login</h3>
-<hr>
+<hr />
+<form method="post">
+  {% csrf_token %}{{form.as_p}}
+  <button type="submit" class="btn btn-outline-success">login</button>
+</form>
 {% endblock body %}
-
