--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,9 @@
-{% extends "layout.html" %}
-{% block body %}
+{% extends "layout.html" %} {% block body %}
 <h3>Register</h3>
-<hr>
-{% endblock body %}
+<hr />
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="btn btn-outline-primary">Register</button>
+</form>
+{% endblock %}
