--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,27 +1,44 @@
 <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-    <button
-      class="navbar-toggler navbar-toggler-right"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarCollapse"
-      aria-controls="navbarCollapse"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="/">HB Blog</a>
-  
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/about">About</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/articles">Articles</a>
-        </li>
-      </ul>
-  
-      
-    </div>
-  </nav>
+  <button
+    class="navbar-toggler navbar-toggler-right"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarCollapse"
+    aria-controls="navbarCollapse"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="/">HB Blog</a>
+
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/articles">Articles</a>
+      </li>
+    </ul>
+
+    {% if request.user.is_authenticated %}
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/article/dashboard">Dashboard</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/user/logout">Logout</a>
+      </li>
+    </ul>
+    {% else %}
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/user/register">Register</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/user/login">Login</a>
+      </li>
+    {% endif %}
+  </div>
+</nav>
