--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,13 @@
 {% extends "layout.html" %} {% block body %}
-<h3>Register</h3>
-<hr />
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" class="btn btn-outline-primary">Register</button>
-</form>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <h3>Register</h3>
+    <hr />
+    <form method="post">
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit" class="btn btn-outline-primary">Register</button>
+    </form>
+  </div>
+</div>
+
 {% endblock %}
