--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,6 +6,8 @@
 <a href="/article/addarticle" , class="btn btn-outline-danger">Add Article</a>
 <hr />
 
+{% if articles %}
+
 <table class="table">
   <thead>
     <tr>
@@ -21,7 +23,7 @@
     {% for article in articles %}
     <tr>
       <th scope="row">{{article.id}}</th>
-      <td>{{article.title}}</td>
+      <td><a href="/article/article/{{article.id}}">{{article.title}}</a></td>
       <td>{{article.author}}</td>
       <td>{{article.date}}</td>
       <td>
@@ -38,5 +40,8 @@
     </tr>
   </tbody>
 </table>
-
-{% endblock body %}
+{% else %}
+<div class="alert alert-danger">
+  <p>There is no article</p>
+</div>
+{% endif %} {% endblock body %}
