Update dynamic article URLs and templates

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
     {% include "includes/navbar.html" %}
 
     <br /><br /><br />
-    <div class="container">
+    <div style= "margin-bottom: 50px;" class="container">
       {% if messages %}
 <ul class="messages">
     {% for message in messages %}
