--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 <hr />
 <p>Welcome <small>{{request.user.username}}</small></p>
 <hr />
-<a href="/article/addarticle" , class="btn btn-outline-danger">Add Article</a>
+<a href='{% url "article:addarticle" %}' , class="btn btn-outline-danger">Add Article</a>
 <hr />
 
 {% if articles %}
@@ -23,16 +23,16 @@
     {% for article in articles %}
     <tr>
       <th scope="row">{{article.id}}</th>
-      <td><a href="/article/article/{{article.id}}">{{article.title}}</a></td>
+      <td><a href='{% url "article:detail" article.id %}'>{{article.title}}</a></td>
       <td>{{article.author}}</td>
       <td>{{article.date}}</td>
       <td>
-        <a href="/article/update/{{article.id}}" class="btn btn-outline-success"
+        <a href='{% url "article:update" article.id%}' class="btn btn-outline-success"
           >Update</a
         >
       </td>
       <td>
-        <a href="/article/delete/{{article.id}}" class="btn btn-outline-danger"
+        <a href='{% url "article:delete" article.id%}'" class="btn btn-outline-danger"
           >Delete</a
         >
       </td>
