--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,34 +10,34 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/">HB Blog</a>
+  <a class="navbar-brand" href="{% url 'index' %}">HB Blog</a>
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link" href='{% url "about" %}'>About</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/articles">Articles</a>
+        <a class="nav-link" href="{% url 'article:articlesPage' %}">Articles</a>
       </li>
     </ul>
 
     {% if request.user.is_authenticated %}
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/article/dashboard">Dashboard</a>
+        <a class="nav-link" href="{% url 'article:dashboard' %}">Dashboard</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/user/logout">Logout</a>
+        <a class="nav-link" href="{% url 'user:logout' %}">Logout</a>
       </li>
     </ul>
     {% else %}
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/user/register">Register</a>
+        <a class="nav-link" href="{% url 'user:register' %}">Register</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/user/login">Login</a>
+        <a class="nav-link" href="{% url 'user:login' %}">Login</a>
       </li>
     {% endif %}
   </div>
