--- a/templates/update.html
+++ b/templates/update.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block body %}
-<h3>Edit Article</h3>
+<h3>Update Article</h3>
 <hr />
 <form method="post">
   {% csrf_token %}{{form.as_p}}
